--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <h1>Sagar Mallik</h1>
   <h2>This is  my first git project</h2>
   <p>This is the change</p>
+  <img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png" alt="">
 </body>
 </html>
