Add new message

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <h2>This is  my first git project</h2>
   <p>This is the change</p>
   <img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png" alt="">
+  <p>Some changes done after error fix...</p>
 </body>
 </html>
