--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
   <p>This is the change</p>
   <img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png" alt="">
   <p>Some changes done after error fix...</p>
+  <p>Update HTML to push changes on github</p>
 </body>
 </html>
