--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
   <img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png" alt="">
   <p>Some changes done after error fix...</p>
   <p>Update HTML to push changes on github</p>
+  <p>Updated HTML 001</p>
 </body>
 </html>
